Add javascript-exercises submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "css-exercises"]
 	path = css-exercises
 	url = git@github.com:pavelnaut/css-exercises.git
+[submodule "javascript-exercises"]
+	path = javascript-exercises
+	url = git@github.com:pavelnaut/javascript-exercises.git
